2005-01-06  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/dialog/: Added aboutdialog example.

2.5.4:

2005-01-05  Murray Cumming  <murrayc@murrayc.com>

	* atk/src/atk_enums.defs: Regenerated.
	* atk/src/relation.hg: Added add_target().
	* atk/src/relationset.hg: Added add_relation_by_type().
	* atk/src/text.hg: Added get_range_extents(), get_bounded_ranges().

2005-01-05  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/gdk_pixbuf.defs: Updated with h2defs.py
	* gdk/src/display.[hg|ccg]: Added supports_selection_notification(), 
	request_selection_notification(), supports_clipboard_persistance(), 
	store_clipboard().
	* gdk/src/pixbuf.[hg|ccg]: Added rotate_simple(), flip(), 
	save_to_buffer().
	* gdk/src/pixbuf_format.hg: Added is_scalable(), is_disabled(), 
	set_disabled(), get_license().
	* gdk/src/window.hg: Added enable_synchronized_configure(), 
	configure_finished(), set_focus_on_map().

2005-01-05  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/gdk_methods.defs: Updated with h2defs.py.

2005-01-04  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/gdk_enums.defs, gtk/src/gtk_enums.defs, 
	gtk/src/gtk_signals.defs: Regenerated.
	* gtk/src/gtk_others.defs: Added get_authors, get_documentors and 
	get_artists because h2defs.py does not add them to gtk_methods.defs, 
	for some reason.
	* gtk/src/action.hg: Added get_accel_path().

2005-01-04  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treeview.hg: Added hover_expand and hover_selection 
	properties.

2005-01-03  Bryan Forbes  <bryan@reigndropsfall.net>

	* gtk/src/cellrenderertext.hg: added properties "language", 
	"ellipsize", and "ellipsize-set".

2.5.3:

2004-12-19  Murray Cumming  <murraycmurrayc.com>

	* gdk/pixbuf.hg: Added create_from_file() overload that takes 
	height and width, wrapping gdk_pixbuf_create_from_file_at_scale().
	Bug #157894.

2004-12-19 Claudio Saavedra <csaavedra@alumnos.utalca.cl>
 	
 	* example/book/input/main.cc: Improved example to use a 