@@ -1893,6 +1893,88 @@ be represented with a local filename.
 <return></return>
 </function>
 
+<function name="gtk_text_iter_forward_search">
+<description>
+Searches forward for @str. Any match is returned by setting 
+@match_start to the first character of the match and @match_end to the 
+first character after the match. The search will not continue past
+@limit. Note that a search is a linear or O(n) operation, so you
+may wish to use @limit to avoid locking up your UI on large
+buffers.
+
+If the #GTK_TEXT_SEARCH_VISIBLE_ONLY flag is present, the match may
+have invisible text interspersed in @str. i.e. @str will be a
+possibly-noncontiguous subsequence of the matched range. similarly,
+if you specify #GTK_TEXT_SEARCH_TEXT_ONLY, the match may have
+pixbufs or child widgets mixed inside the matched range. If these
+flags are not given, the match must be exact; the special 0xFFFC
+character in @str will match embedded pixbufs or child widgets.
+</description>
+<parameters>
+<parameter name="iter">
+<parameter_description> start of search
+</parameter_description>
+</parameter>
+<parameter name="str">
+<parameter_description> a search string
+</parameter_description>
+</parameter>
+<parameter name="flags">
+<parameter_description> flags affecting how the search is done
+</parameter_description>
+</parameter>
+<parameter name="match_start">
+<parameter_description> return location for start of match
+</parameter_description>
+</parameter>
+<parameter name="match_end">
+<parameter_description> return location for end of match
+</parameter_description>
+</parameter>
+<parameter name="limit">
+<parameter_description> bound for the search
+</parameter_description>
+</parameter>
+</parameters>
+<return> whether a match was found
+</return>
+</function>
+
+
+<function name="gtk_text_iter_backward_search">
+<description>
+Same as gtk_text_iter_forward_search(), but moves backward.
+</description>
+<parameters>
+<parameter name="iter">
+<parameter_description> a #GtkTextIter where the search begins
+</parameter_description>
+</parameter>
+<parameter name="str">
+<parameter_description> search string
+</parameter_description>
+</parameter>
+<parameter name="flags">
+<parameter_description> bitmask of flags affecting the search
+</parameter_description>
+</parameter>
+<parameter name="match_start">
+<parameter_description> return location for start of match
+</parameter_description>
+</parameter>
+<parameter name="match_end">
+<parameter_description> return location for end of match
+</parameter_description>
+</parameter>
+<parameter name="limit">
+<parameter_description> location of last possible @match_start
+</parameter_description>
+</parameter>
+</parameters>
+<return> whether a match was found
+</return>
+</function>
+
 
 
 </root>
