@@ -218,12 +218,31 @@ public:
                                    TextIter& match_start,
                                    TextIter& match_end,
                                    const TextIter& limit) const, gtk_text_iter_forward_search)
+         
+  /** Same as forward_search(), but searchs to the end.
+   *
+   * @param str A search string.
+   * @param flags Flags affecting how the search is done.
+   * @param match_start Return location for start of match, or <tt>0</tt>.
+   * @param match_end Return location for end of match, or <tt>0</tt>.
+   * @return Whether a match was found.
+   */                          
+   bool forward_search(const Glib::ustring& str, TextSearchFlags flags, TextIter& match_start, TextIter& match_end) const;
 
   _WRAP_METHOD(bool backward_search(const Glib::ustring& str,
                                     TextSearchFlags flags,
                                     TextIter& match_start,
                                     TextIter& match_end,
                                     const TextIter& limit) const, gtk_text_iter_backward_search)
+
+  /** Same as backward_search(), but searches to the start.
+   * @param str Search string.
+   * @param flags Bitmask of flags affecting the search.
+   * @param match_start Return location for start of match, or <tt>0</tt>.
+   * @param match_end Return location for end of match, or <tt>0</tt>.
+   * @return Whether a match was found.
+   */                                    
+  bool backward_search(const Glib::ustring& str, TextSearchFlags flags, TextIter& match_start, TextIter& match_end) const;
 
   _WRAP_METHOD(int compare(const TextIter& rhs) const, gtk_text_iter_compare)
   _WRAP_METHOD(bool in_range(const TextIter& start, const TextIter& end) const, gtk_text_iter_in_range)
