@@ -1,5 +1,13 @@
 2005-01-06  Murray Cumming  <murrayc@murrayc.com>
 
+	* gtk/src/treeiter.[hg|ccg]: Add forward_search() and 
+	backward_search() overloads without the limit argument.
+	* gtk/src/gtk_docs_override.xml: Correct the documentation for 
+	the full forward_search() and backward_search() methods, so that it 
+	does not suggest 0 for references. Bug found by Rob Page.
+
+2005-01-06  Murray Cumming  <murrayc@murrayc.com>
+
 	* examples/book/dialog/: Added aboutdialog example.
 
 2.5.4:
